--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Kepeng Xu (徐克鹏)"
+title                    : "Li Xu (徐莉)"
 description              : "Ph.D. student at Xidian University, focus on cutting-edge technology research in the fields of video image enhancement, video compression, and computational imaging."
-repository               : "kepengxu/kepengxu.github.io"
+repository               : "icecherylXuli/icecherylXuli.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -21,14 +21,14 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Kepeng Xu (徐克鹏)"
+  name             : "Li Xu (徐莉)"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Xidian University"
   location         : "Xi'an, China"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=I1x3S4gAAAAJ&hl=en&oi=ao"
-  email            : "kepengxu11@gmail.com"
+  googlescholar    : "https://scholar.google.com/citations?user=_KJ75xYAAAAJ"
+  email            : "cherylxu@stu.xidian.edu.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        : 
@@ -37,14 +37,14 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : kepengxu # e.g., "github username"
+  github           : icecherylXuli # e.g., "github username"
   google_plus      : 
   keybase          :
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : # e.g., "linkedin username"
-  dblp             : https://dblp.org/pid/247/4181.html  # e.g., "https://dblp.org/pid/xx/xxxx.html"
+  dblp             : https://dblp.org/pid/85/2168-8.html  # e.g., "https://dblp.org/pid/xx/xxxx.html"
   orcid            : # e.g., "https://orcid.org/xxxx"
   pinterest        :
   soundcloud       :
